--- a/style.css
+++ b/style.css
@@ -2414,5 +2414,11 @@ select.form-control {
 }
 
 .map-container {
+  width: 100%;
   height: 400px;
+}
+
+.settings-section {
+  display: none;
+  margin-bottom: var(--space-32);
 }
